# python-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  rest.http
.github/actions/setup-env/: action.yml
.github/workflows/: audit.yml  lint.yml  test.yml
app/: __init__.py  __main__.py  main.py
app/configs/: DBSessionMiddleware.py  DDLManager.py  Database.py  Lifespan.py  MongoDB.py  Settings.py
app/controllers/: UserController.py  __init__.py
app/core/: Database.py  MongoDB.py  Settings.py
app/dtos/: UserDtos.py
app/exceptions/: UserExceptions.py  UserNotFoundException.py
app/models/: LogDocument.py  User.py
app/repositories/: UserRepository.py
app/services/: UserService.py
app/utils/: DtoUtil.py
docker/: .env.prod.example  Dockerfile  docker-compose.yml  run.sh
docker/whl/: Dockerfile  docker-compose.yml
tests/: test_user.py
