[project]
name = "python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beanie>=2.1.0",
    "fastapi>=0.135.3",
    "fastapi-utils>=0.8.0",
    "motor>=3.7.1",
    "mypy>=1.20.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.49",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.44.0",
]
